--- a/ThinkWhat/Modules/Controllers/App/Survey/Create/Poll/Images selection/Collection/ImageSelectionHeaderContent.xib
+++ b/ThinkWhat/Modules/Controllers/App/Survey/Create/Poll/Images selection/Collection/ImageSelectionHeaderContent.xib
@@ -30,7 +30,7 @@
                                 <constraint firstAttribute="width" secondItem="gnK-h3-k49" secondAttribute="height" multiplier="1:1" id="o9V-1y-Xwu"/>
                             </constraints>
                         </imageView>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YHN-MK-cz5" customClass="InsetLabel" customModule="ThinkWhat" customModuleProvider="target">
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YHN-MK-cz5">
                             <rect key="frame" x="8" y="8" width="292" height="84"/>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                             <nil key="textColor"/>
