--- a/ThinkWhat/Modules/Controllers/App/Survey/Create/Poll/Popup content/Limits/LimitsSelectionView.xib
+++ b/ThinkWhat/Modules/Controllers/App/Survey/Create/Poll/Popup content/Limits/LimitsSelectionView.xib
@@ -53,7 +53,7 @@
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IYG-sb-Kve">
                     <rect key="frame" x="0.0" y="90" width="400" height="420"/>
                     <subviews>
-                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Shp-fJ-r8n">
+                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Shp-fJ-r8n" customClass="DisabledPasteTextField" customModule="ThinkWhat" customModuleProvider="target">
                             <rect key="frame" x="60" y="168" width="280" height="84"/>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <textInputTraits key="textInputTraits" keyboardType="numberPad" returnKeyType="done"/>
